Finished registration, just need some polishment, but email sending and validation works as a charm

--- a/application/config.ini.tmpl
+++ b/application/config.ini.tmpl
@@ -8,7 +8,7 @@ db_name="tianguiscabal"
 default_language = "es_MX"
 
 ; Timezone
-timezone = "America/Mexico_City"
+default_timezone = "America/Mexico_City"
 
 ;Loging Settings
 ;Valid options are text, web, both, none
@@ -33,3 +33,8 @@ email_port = 465
 email_login = "account@gmail.com"
 email_password ="password"
 email_ssl = on
+
+;Validation
+;Salt is a string that joined to a known string to be hashed, gives that extra
+;knotch of security to be publicy used
+salt="the salt can be anything you want, anything!!"
