--- a/application/views/user/new.phtml
+++ b/application/views/user/new.phtml
@@ -1,4 +1,4 @@
-  <form action="<?php echo BASE_URL?>/user/save"  method="post">
+  <form action="<?php echo BASE_URL?>/user/register"  method="post">
     
     <label for="name">Usuario:</label><input type="text" name="name" id="name"/><br/>
     <label for="full_name">Nombre Completo:</label><input type="text" name="full_name" id="full_name"/><br/>
