Link para productos

--- a/application/views/index/index.phtml
+++ b/application/views/index/index.phtml
@@ -1,2 +1,6 @@
 	<p>Está es la página inicial del TianguisCabal,	siguiendo la idea inicial del
 	proyecto aquí debería de estar un listado de los productos.</p>
+	
+	<ul>
+  	  <li><a href="<?php echo BASE_URL ?>/products">Productos</a></li>
+  	</ul>
