--- a/application/views/products/list.phtml
+++ b/application/views/products/list.phtml
@@ -19,7 +19,7 @@
       <td><?php echo $Products->exchange_for?></td>
       <td><?php echo $Products->date?></td>
       <td>
-        <a href="<?php echo BASE_URL ?>/products/edit/?id=<?php echo $Products->product_id' ?>">Editar</a>
+        <a href="<?php echo BASE_URL ?>/products/edit/?id=<?php echo $Products->product_id ?>">Editar</a>
       </td>
     </tr>
   <?php }?>
